fix: modify an unintended whitespace issue

--- a/src/pages/global.scss
+++ b/src/pages/global.scss
@@ -4,7 +4,7 @@
 
 * {
   font-family: "Pretendard Variable", sans-serif;
-  @apply break-words break-keep whitespace-break-spaces;
+  @apply break-words break-keep;
   @apply subpixel-antialiased;
 }
 
